--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/Status.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/Status.razor
@@ -103,7 +103,7 @@ dictionary FileSystemRemoveOptions {
 
 [Exposed=(Window,Worker), SecureContext, Serializable]
 interface FileSystemDirectoryHandle : FileSystemHandle {
-  async iterable<USVString, FileSystemHandle>;
+  async_iterable<USVString, FileSystemHandle>;
 
   Promise<FileSystemFileHandle> getFileHandle(USVString name, optional FileSystemGetFileOptions options = {});
   Promise<FileSystemDirectoryHandle> getDirectoryHandle(USVString name, optional FileSystemGetDirectoryOptions options = {});
